# tibs

./: changes.xlsx  pyproject.toml
docs/: G2-28 Reproductive Ques.word CLEAN.docx  Gen2_27 Physical assessment TiBS.docm  ~$-28 Reproductive Ques.word CLEAN.docx
nbs/: 01_explore_vars.ipynb  01_explore_vars_tibs.ipynb  02_explore_data.ipynb  02_explore_data_tibs.ipynb  _02_explore_data.py  _02_explore_data_tibs.py
